--- a/Assignment11/index.html
+++ b/Assignment11/index.html
@@ -8,7 +8,7 @@
 </head>
 
 
-<body>
+<body style=" background-color: rgb(48, 45, 45);">
 
     <div class="top-bar">
         <div class="logo">YouTube</div>
