--- a/Assignment13/index.html
+++ b/Assignment13/index.html
@@ -11,17 +11,16 @@
 
 
         <div class="sideBar">
-            <div>
-                <div class="sideItem">C</div>
-                <div class="sideItem">S</div>
-                <div class="sideItem">C</div>
-                <div class="sideItem">C</div>
-                <div class="sideItem">M</div>
+            <div class="colFlex_">
+                <img class="icon-large" src="newChat.png">
+                <img class="icon-small" src="status.png">
+                <img class="icon-small" src="channels.png">
+                <img class="icon-small" src="commnities.png">
             </div>
-            <div>
-                <div class="sideItem">S</div>
+            <div class="colFlex_">
+                <img class="icon-small" src="settings.png">
                 <div>
-                <img style="height: 20px; width: 20px; border-radius: 50%;" src="profile-icon-design-free-vector.jpg" >
+                <img class="icon-large" src="profile.jpg" >
                 </div>
             </div>
         </div>
@@ -35,8 +34,8 @@
                 <div class="header-item">
                     <div style="font-size: 22px;">Chats</div>
                     <div>
-                        <span>Menu</span>
-                        <span>NChat</span>
+                        <img class="icon-small"  src="newChat.png">
+                        <img class="icon-small"  src="options.png">
                     </div>
                 </div>
 
@@ -62,7 +61,7 @@
             <div class="msgBar">
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -77,7 +76,7 @@
             </div>
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -93,7 +92,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -109,7 +108,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -125,7 +124,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -141,7 +140,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -157,7 +156,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -173,7 +172,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -189,7 +188,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -205,7 +204,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -222,7 +221,7 @@
 
                <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -238,7 +237,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -254,7 +253,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -270,7 +269,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -286,7 +285,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -302,7 +301,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -318,7 +317,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -334,7 +333,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -350,7 +349,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -366,7 +365,7 @@
 
             <div class="msgItem rowFlex">
                 <div>
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
+                    <img class="img" src="profile.jpg">
                 </div>
                 <div class="colFlex">
                     <div class="rowFlex">
@@ -394,15 +393,15 @@
         <div class="txtArea">
             <header class="txtHeader rowFlex">
                 <div class="rowFlex">
-                    <img class="img" src="profile-icon-design-free-vector.jpg">
-                     <div class="colFlex_">
+                    <img class="img" src="profile.jpg">
+                     <div class="colFlex">
                         <div style="font-size: 20px;">Sara</div>
                         <span>last seen today at 11:06 pm</span>
                     </div>
                 </div>
                 <div class="rowFlex">
-                    <div>Search</div>
-                    <div>Menu</div>
+                    <img class="icon-small" src="search.png">
+                    <img class="icon-small" src="options.png">
                 </div>
             </header>
 
@@ -437,9 +436,11 @@
 
 
             <div class="txtFooter rowFlex">
-                <div style="font-size: xx-large;">+</div>
+                <img class="icon-small" src="plus.png">
+
                 <textarea class="sendTxt" placeholder="Type a Message"></textarea>
-                <div>Voice</div>
+                <img class="icon-small" src="mic.png">
+
 
             </div>
 
