send text fixes

--- a/Assignment13/index.html
+++ b/Assignment13/index.html
@@ -438,7 +438,7 @@
             <div class="txtFooter rowFlex">
                 <img class="icon-small" src="plus.png">
 
-                <textarea class="sendTxt" placeholder="Type a Message"></textarea>
+                <input class="sendTxt" placeholder="Type a Message"></input>
                 <img class="icon-small" src="mic.png">
 
 
