--- a/Assignment13/index.html
+++ b/Assignment13/index.html
@@ -28,7 +28,7 @@
 
 
         
-        <div class="colFlex_">
+        <div class>
             <div class="header">
 
                 <div class="header-item">
