--- a/Assignment13/index.html
+++ b/Assignment13/index.html
@@ -28,7 +28,7 @@
 
 
         
-        <div class>
+        <div class="container">
             <div class="header">
 
                 <div class="header-item">
@@ -406,7 +406,7 @@
             </header>
 
 
-            <div class="txtEditor colFlex_">
+            <div class="txtEditor">
               
                 <div class="recMsg">Are we meeting today?</div>
                 <div class="sentMsg">Yes! I was thinking around 2 PM at the office. Does that work?</div>
@@ -418,6 +418,18 @@
                 <div class="sentMsg">Yes, that would be helpful. Also, bring any notes on the user flow.</div>
                 <div class="recMsg">Got it. Do you think we’ll need more than two hours?</div>
                 <div class="sentMsg">Probably not, but let’s block 2-4 PM just in case.</div>
+                <div class="recMsg">Alright. Is everyone else joining?</div>
+                <div class="sentMsg">I spoke to Sarah and Mike, they’ll be there. Still waiting on a confirmation from David.</div>
+                <div class="recMsg">Okay, I’ll ping David and remind him.</div>
+                <div class="sentMsg">Thanks! Also, I was thinking we should discuss the API integration today too.</div>
+                <div class="recMsg">Good point. The client had some specific requests about that. I’ll bring my notes.</div>
+                <div class="sentMsg">Awesome. Did you get a chance to review the new UI mockups?</div>
+                <div class="recMsg">Yes, I liked them! But I think we should tweak the navigation bar a bit.</div>
+                <div class="sentMsg">Agreed. Let’s discuss that in the meeting. Maybe Sarah can help with the redesign.</div>
+                <div class="recMsg">Perfect. Should we order some coffee for the meeting?</div>
+                <div class="sentMsg">Haha, yes! Long meetings definitely need coffee. I’ll place an order before we start.</div>
+                <div class="recMsg">Great! See you at 2 PM then.</div>
+                <div class="sentMsg">See you there! Let’s get this project moving forward 🚀</div>
                 <div class="recMsg">Alright. Is everyone else joining?</div>
                 <div class="sentMsg">I spoke to Sarah and Mike, they’ll be there. Still waiting on a confirmation from David.</div>
                 <div class="recMsg">Okay, I’ll ping David and remind him.</div>
